--- a/about.html
+++ b/about.html
@@ -39,79 +39,7 @@
             },
         };
     </script>
-    <style>
-        html {
-            scroll-behavior: smooth;
-            scroll-padding-top: 80px;
-        }
-
-        body {
-            opacity: 0;
-        }
-
-        :root {
-            scroll-behavior: smooth;
-        }
-
-        /* Prevent header jitter on scroll */
-        nav {
-            transform: translateZ(0);
-            backface-visibility: hidden;
-            will-change: transform, backdrop-filter;
-        }
-
-        /* Cinematic Animations */
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(10px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes revealDrift {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .animate-fade-in {
-            animation: fadeIn 0.4s ease-out forwards;
-        }
-
-        .reveal-on-load {
-            opacity: 0;
-            animation: revealDrift 0.6s ease-out 0.1s forwards;
-        }
-
-        /* Smooth Anchor Landing */
-        section[id] {
-            scroll-margin-top: 100px;
-        }
-
-        .gradient-bg {
-            background: linear-gradient(135deg, rgba(43, 124, 182, 0.05) 0%, rgba(30, 41, 59, 0.05) 100%);
-        }
-
-        .pattern-bg {
-            background-image: radial-gradient(#cbd5e1 1px, transparent 1px);
-            background-size: 20px 20px;
-        }
-
-        .dark .pattern-bg {
-            background-image: radial-gradient(#334155 1px, transparent 1px);
-        }
-    </style>
+    <link rel="stylesheet" href="main.93hf82.css" />
 </head>
 
 <body id="top"
@@ -214,7 +142,7 @@
                             <span class="text-primary font-bold tracking-[0.2em] uppercase text-xs">Who We Are</span>
                         </div>
                         <h1
-                            class="font-serif text-5xl md:text-6xl lg:text-7xl text-secondary dark:text-white leading-[1.1] mb-8 tracking-tight">
+                            class="font-serif text-4xl sm:text-5xl lg:text-7xl text-secondary dark:text-white leading-[1.1] mb-8 tracking-tight">
                             Dependable Finance & <br /><span class="text-primary italic">Compliance Coordination.</span>
                         </h1>
                         <div class="space-y-6 text-xl text-gray-500 dark:text-gray-400 leading-relaxed font-light">
@@ -250,7 +178,7 @@
 
                         <div
                             class="relative rounded-[2rem] overflow-hidden shadow-2xl aspect-[4/5] bg-gray-100 dark:bg-gray-800 border-[12px] border-white dark:border-gray-800 ring-1 ring-gray-100 dark:ring-gray-700 group">
-                            <img alt="Founder Portrait"
+                            <img loading="lazy" alt="Founder Portrait"
                                 class="w-full h-full object-cover group-hover:scale-105 transition-all duration-1000 ease-out"
                                 src="advisor_photo.jpg" />
                             <div
@@ -767,6 +695,10 @@
                 const menuPanel = menu ? menu.querySelector('.w-64') : null;
 
                 if (!btn || !menu || !menuPanel) return;
+
+                // Prevent duplicate listener attachments on navigation
+                if (this._menuInitialized) return;
+                this._menuInitialized = true;
 
                 const toggleMenu = () => {
                     const isOpen = !menu.classList.contains('hidden');
