--- a/global_companies.html
+++ b/global_companies.html
@@ -40,79 +40,7 @@
             },
         };
     </script>
-    <style>
-        html {
-            scroll-behavior: smooth;
-            scroll-padding-top: 80px;
-        }
-
-        body {
-            opacity: 0;
-        }
-
-        :root {
-            scroll-behavior: smooth;
-        }
-
-        /* Prevent header jitter on scroll */
-        nav {
-            transform: translateZ(0);
-            backface-visibility: hidden;
-            will-change: transform, backdrop-filter;
-        }
-
-        /* Cinematic Animations */
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(10px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes revealDrift {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .animate-fade-in {
-            animation: fadeIn 0.4s ease-out forwards;
-        }
-
-        .reveal-on-load {
-            opacity: 0;
-            animation: revealDrift 0.6s ease-out 0.1s forwards;
-        }
-
-        /* Smooth Anchor Landing */
-        section[id] {
-            scroll-margin-top: 100px;
-        }
-
-        .gradient-bg {
-            background: linear-gradient(135deg, rgba(43, 124, 182, 0.05) 0%, rgba(30, 41, 59, 0.05) 100%);
-        }
-
-        .pattern-bg {
-            background-image: radial-gradient(#cbd5e1 1px, transparent 1px);
-            background-size: 20px 20px;
-        }
-
-        .dark .pattern-bg {
-            background-image: radial-gradient(#334155 1px, transparent 1px);
-        }
-    </style>
+    <link rel="stylesheet" href="main.93hf82.css" />
 </head>
 
 <body id="top"
@@ -218,7 +146,7 @@
                             Global Expertise, Local Compliance
                         </span>
                         <h1
-                            class="text-5xl md:text-6xl lg:text-7xl font-serif text-secondary dark:text-white leading-tight mb-6">
+                            class="text-4xl sm:text-5xl lg:text-7xl font-serif text-secondary dark:text-white leading-tight mb-6">
                             India Regulatory, Finance <br />
                             <span class="text-primary italic">&amp; Transaction Support</span>
                         </h1>
@@ -242,7 +170,7 @@
                     <div class="relative mt-8 lg:mt-0">
                         <div
                             class="rounded-2xl overflow-hidden shadow-2xl aspect-[4/3] group border-4 border-white dark:border-gray-700 ring-1 ring-gray-200 dark:ring-gray-700">
-                            <img src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?auto=format&fit=crop&w=800&q=75"
+                            <img loading="lazy" src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?auto=format&fit=crop&w=800&q=75"
                                 alt="Global financial district skyline"
                                 class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-1000" />
                         </div>
@@ -553,7 +481,7 @@
                     <div class="relative">
                         <div
                             class="rounded-2xl overflow-hidden shadow-2xl aspect-[4/3] bg-gray-100 group border border-gray-200 dark:border-gray-700">
-                            <img alt="Corporate professional confident"
+                            <img loading="lazy" alt="Corporate professional confident"
                                 class="w-full h-full object-cover group-hover:scale-105 transition duration-700"
                                 src="https://images.unsplash.com/photo-1560179707-f14e90ef3623?auto=format&fit=crop&w=700&q=75" />
                         </div>
@@ -561,10 +489,10 @@
                             class="absolute -bottom-8 -left-8 bg-white dark:bg-gray-800 p-6 rounded-xl shadow-xl border border-gray-100 dark:border-gray-700 max-w-xs">
                             <div class="flex items-center gap-3 mb-2">
                                 <div class="flex -space-x-2">
-                                    <img alt="Client"
+                                    <img loading="lazy" alt="Client"
                                         class="w-10 h-10 rounded-full border-2 border-white dark:border-gray-700"
                                         src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?auto=format&fit=facearea&facepad=2&w=100&h=100&q=80" />
-                                    <img alt="Client"
+                                    <img loading="lazy" alt="Client"
                                         class="w-10 h-10 rounded-full border-2 border-white dark:border-gray-700"
                                         src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?auto=format&fit=facearea&facepad=2&w=100&h=100&q=80" />
                                 </div>
@@ -830,6 +758,10 @@
                     const menuPanel = menu ? menu.querySelector('.w-64') : null;
 
                     if (!btn || !menu || !menuPanel) return;
+
+                    // Prevent duplicate listener attachments on navigation
+                    if (this._menuInitialized) return;
+                    this._menuInitialized = true;
 
                     const toggleMenu = () => {
                         const isOpen = !menu.classList.contains('hidden');
