--- a/index.html
+++ b/index.html
@@ -152,53 +152,69 @@
 
     <main id="content-area">
         <!-- Hero Section -->
-        <header class="relative pt-12 pb-20 md:pt-24 md:pb-32 overflow-hidden reveal-on-load">
-            <div class="absolute inset-0 pattern-bg opacity-40 pointer-events-none"></div>
+        <header
+            class="relative pt-20 pb-20 md:pt-32 md:pb-32 overflow-hidden reveal-on-load bg-white dark:bg-navy-dark border-b border-gray-100 dark:border-gray-800">
+            <!-- Minimal Pattern Background -->
+            <div class="absolute inset-0 pattern-bg opacity-30 pointer-events-none"></div>
+
+            <!-- Soft Ambient Glows (Subtle) -->
             <div
-                class="absolute right-0 top-0 w-1/3 h-full bg-gradient-to-l from-blue-50/50 to-transparent dark:from-blue-900/10 dark:to-transparent pointer-events-none">
+                class="absolute -top-40 -left-40 w-96 h-96 bg-primary/10 rounded-full blur-[100px] pointer-events-none">
             </div>
+            <div
+                class="absolute top-20 -right-20 w-80 h-80 bg-blue-100/50 dark:bg-blue-900/20 rounded-full blur-[80px] pointer-events-none">
+            </div>
+
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10 text-center">
                 <div class="max-w-4xl mx-auto">
+                    <!-- Elegant Pill -->
                     <span
-                        class="inline-block py-1 px-3 rounded-full bg-accent-gold/20 text-accent-gold text-[10px] sm:text-xs font-semibold mb-4 border border-accent-gold/30 uppercase tracking-widest">
+                        class="inline-block py-1.5 px-5 rounded-full bg-primary/5 dark:bg-primary/10 border border-primary/20 text-primary text-[10px] sm:text-xs font-bold mb-6 uppercase tracking-[0.2em] shadow-sm">
                         India Regulatory & Transaction Support
                     </span>
+
+                    <!-- Premium Typography -->
                     <h1
-                        class="text-3xl sm:text-5xl md:text-6xl lg:text-7xl font-serif text-secondary dark:text-white leading-[1.2] mb-6">
-                        Trusted Financial & Tax Consultancy in Kerala
+                        class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-serif text-secondary dark:text-white leading-[1.15] mb-6 tracking-tight">
+                        Trusted Financial & Tax <br />Consultancy in Kerala
                     </h1>
                     <p
-                        class="text-base sm:text-xl text-gray-600 dark:text-gray-300 mb-8 max-w-3xl mx-auto font-light leading-relaxed">
+                        class="text-base sm:text-xl text-gray-500 dark:text-gray-400 mb-10 max-w-3xl mx-auto font-light leading-relaxed">
                         Helping businesses stay compliant, confident, and financially secure — without the stress of
                         complex regulations.
                     </p>
-                    <div class="flex flex-col sm:flex-row justify-center gap-4 sm:gap-6 mb-10">
-                        <a class="inline-flex items-center justify-center px-8 py-3.5 border border-transparent text-sm font-bold rounded-xl shadow-lg text-white bg-primary hover:bg-opacity-90 hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1"
+
+                    <!-- Sleek CTAs -->
+                    <div class="flex flex-col sm:flex-row justify-center gap-4 sm:gap-6 mb-12">
+                        <a class="inline-flex items-center justify-center px-8 py-3.5 border border-transparent text-sm font-bold rounded-xl shadow-lg shadow-primary/20 text-white bg-primary hover:bg-opacity-90 transition-all duration-300 transform hover:-translate-y-1"
                             href="contact.html">
                             Secure Your Consultation
                         </a>
-                        <a class="inline-flex items-center justify-center px-8 py-3.5 border-2 border-primary text-sm font-bold rounded-xl text-primary hover:bg-primary/5 transition-all duration-300"
+                        <a class="inline-flex items-center justify-center px-8 py-3.5 border border-gray-200 dark:border-white/20 text-sm font-bold rounded-xl text-secondary dark:text-white bg-white dark:bg-white/5 hover:bg-gray-50 dark:hover:bg-white/10 shadow-sm transition-all duration-300"
                             href="#services">
                             Build Financial Confidence
                         </a>
                     </div>
 
-                    <!-- Compact Trust Metrics Row -->
-                    <div class="flex flex-wrap justify-center items-center gap-6 md:gap-10 mt-8 mb-10 opacity-90">
-                        <div class="flex items-center gap-2">
-                            <span class="material-icons-outlined text-accent-gold text-xl">verified</span>
-                            <span class="text-sm font-bold text-secondary dark:text-gray-300">15+ Years
-                                Experience</span>
+                    <!-- Refined Trust Metrics -->
+                    <div
+                        class="flex flex-wrap justify-center items-center gap-6 md:gap-12 mt-8 opacity-90 border-t border-gray-100 dark:border-white/10 pt-8 inline-block mx-auto">
+                        <div class="flex items-center gap-3">
+                            <span class="material-icons-outlined text-primary text-xl">verified</span>
+                            <span class="text-sm font-semibold text-secondary dark:text-gray-300 tracking-wide">15+
+                                Years Experience</span>
                         </div>
                         <div class="hidden md:block w-1 h-1 rounded-full bg-gray-300 dark:bg-gray-600"></div>
-                        <div class="flex items-center gap-2">
-                            <span class="material-icons-outlined text-accent-gold text-xl">groups</span>
-                            <span class="text-sm font-bold text-secondary dark:text-gray-300">500+ Active Clients</span>
+                        <div class="flex items-center gap-3">
+                            <span class="material-icons-outlined text-primary text-xl">groups</span>
+                            <span class="text-sm font-semibold text-secondary dark:text-gray-300 tracking-wide">500+
+                                Active Clients</span>
                         </div>
                         <div class="hidden md:block w-1 h-1 rounded-full bg-gray-300 dark:bg-gray-600"></div>
-                        <div class="flex items-center gap-2">
-                            <span class="material-icons-outlined text-accent-gold text-xl">fact_check</span>
-                            <span class="text-sm font-bold text-secondary dark:text-gray-300">99% Compliance Rate</span>
+                        <div class="flex items-center gap-3">
+                            <span class="material-icons-outlined text-primary text-xl">fact_check</span>
+                            <span class="text-sm font-semibold text-secondary dark:text-gray-300 tracking-wide">99%
+                                Compliance Rate</span>
                         </div>
                     </div>
                 </div>
